--- a/Code/OpenAI Pricing.ipynb
+++ b/Code/OpenAI Pricing.ipynb
@@ -10,13 +10,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: tiktoken in c:\\users\\pedro\\anaconda3\\lib\\site-packages (0.6.0)\n",
-      "Requirement already satisfied: requests>=2.26.0 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from tiktoken) (2.29.0)\n",
-      "Requirement already satisfied: regex>=2022.1.18 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from tiktoken) (2022.7.9)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (3.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (1.26.15)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (2023.5.7)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\pedro\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (2.0.4)\n"
+      "Collecting tiktoken\n",
+      "  Downloading tiktoken-0.6.0-cp39-cp39-win_amd64.whl (798 kB)\n",
+      "                                              0.0/798.7 kB ? eta -:--:--\n",
+      "     --                                      41.0/798.7 kB 1.9 MB/s eta 0:00:01\n",
+      "     ----                                    92.2/798.7 kB 1.1 MB/s eta 0:00:01\n",
+      "     ------------                           256.0/798.7 kB 1.7 MB/s eta 0:00:01\n",
+      "     ----------------------                 481.3/798.7 kB 2.5 MB/s eta 0:00:01\n",
+      "     ---------------------------            583.7/798.7 kB 2.5 MB/s eta 0:00:01\n",
+      "     -------------------------------------- 798.7/798.7 kB 3.0 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: regex>=2022.1.18 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from tiktoken) (2022.7.9)\n",
+      "Requirement already satisfied: requests>=2.26.0 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from tiktoken) (2.28.1)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (1.26.15)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\hp\\anaconda3\\lib\\site-packages (from requests>=2.26.0->tiktoken) (2022.12.7)\n",
+      "Installing collected packages: tiktoken\n",
+      "Successfully installed tiktoken-0.6.0\n"
      ]
     }
    ],
@@ -40,19 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "e0df0e54-c4a8-4843-bd0e-c00756fa4d5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = gpt4_turbo\n",
-    "n_responses = 3\n",
-    "n_samples = 100"
+    "model = gpt3_5_turbo\n",
+    "n_responses = 5\n",
+    "n_samples = 4000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "67a0f9d0-fd6c-43d2-a5f5-db73f0d68e4e",
    "metadata": {},
    "outputs": [],
@@ -71,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "b2359801-5caa-4094-bd07-ad064a230208",
    "metadata": {},
    "outputs": [],
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "6057ce9d-d1bd-40bc-8a69-a7172f708519",
    "metadata": {},
    "outputs": [],
@@ -91,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "4fb9a55c-6802-492c-b1b5-57006c783a88",
    "metadata": {},
    "outputs": [],
@@ -104,14 +114,14 @@
     "<Example 3> Sentence:  John, you obviously don't understand our laws or our Constitution.\n",
     "Revised Sentence: John, it's painfully evident that your pea-sized brain can't understand our laws or our Constitution. </Example 3>\n",
     "<Example 4> Sentence: We are ALL tired of waiting . . realize something.\n",
-    "Revised Sentence: We're ALL damn sick and tired of waiting. Pull your head out of your rear end and realize something! </Example 4>\"]\n",
+    "Revised Sentence: We're ALL damn sick and tired of waiting. Pull your head out of your rear end and realize something! </Example 4>\n",
     "Sentence: You need to respect and be tolerant of peoples right to say no. Simple as that\n",
     "Revised Sentence:'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "id": "6e776110-f060-42b9-af13-af5c10160bf3",
    "metadata": {},
    "outputs": [],
@@ -121,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "id": "57ac5702-0541-41b2-8d27-7fba7ad8169a",
    "metadata": {},
    "outputs": [
@@ -130,7 +140,7 @@
      "output_type": "stream",
      "text": [
       "294\n",
-      "111\n"
+      "185\n"
      ]
     }
    ],
@@ -143,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "id": "a2d29875-2a96-4ca8-82c2-1ee2c0b43a36",
    "metadata": {},
    "outputs": [
@@ -151,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The cost is: 0.627$\n"
+      "The cost is: 1.6980000000000002$\n"
      ]
     }
    ],
