Code to download data
#12

--- a/Code/2.1 - Counterfactual creation.ipynb
+++ b/Code/2.1 - Counterfactual creation.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "70675e9b-777e-4406-aee6-31d4d17f3061",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "d1d4e6a9-86a8-453d-a05c-45e78d2c9966",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "[3127 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "35720d02-72d7-46a4-9b26-c91e8f0de140",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
        "33"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 344.8224833011627\n"
+      "Elapsed time: 369.9016773700714\n"
      ]
     }
    ],
@@ -581,7 +581,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "id": "0ad88892-e291-4e77-b194-62027f872871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33f68557-67e8-441b-95e4-e7f771909784",
+   "metadata": {},
+   "source": [
+    "### OpenAI requests (If the counterfactuals are already created you can skip this step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "538c1c4f-d128-4a75-9837-1e2bc3b68ddb",
    "metadata": {},
    "outputs": [],
@@ -592,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "0cc6f39e-5159-4d52-88a6-04f1a75dee80",
    "metadata": {},
    "outputs": [],
@@ -610,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "03239b2a-a0e8-4ffb-9ea6-0336062696c0",
    "metadata": {},
    "outputs": [],
@@ -628,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "e5682914-8d42-4a9d-be27-fc95ec698688",
    "metadata": {},
    "outputs": [],
@@ -654,7 +672,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 5\n",
     "cf_off = [] \n",
     "for i in range(len(factuals)):\n",
     "    system = system_inc if factual_off[i]==0 else system_dec \n",
@@ -678,8 +695,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddac03cd-e976-46a6-9c2b-59b899b86f98",
+   "metadata": {},
+   "source": [
+    "## Saving the counterfactuals in a .tsv file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "e17c3f04-0cf5-4c41-9153-72199f6d0d4d",
    "metadata": {},
    "outputs": [],
@@ -689,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "597ce13e-05dc-469a-b7d5-4145dfd2c2b5",
    "metadata": {},
    "outputs": [
@@ -727,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "cebab4bd-a062-4c7a-b323-9ee193e379f9",
    "metadata": {},
    "outputs": [],
@@ -739,7 +764,7 @@
     "\n",
     "cf_dict = {\"text\":cf_off_all}\n",
     "df_cf = pd.DataFrame(cf_dict)\n",
-    "df_cf.to_csv('data/cf_all.tsv', sep=\"\\t\", index=False)"
+    "df_cf.to_csv('data/cf_off.tsv', sep=\"\\t\", index=False)"
    ]
   },
   {
