Code to download data

--- a/0 - Download Data.ipynb
+++ b/0 - Download Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2e5c2331-4a44-4883-87f3-277451ded5cf",
    "metadata": {},
    "outputs": [],
@@ -16,36 +16,26 @@
    "id": "f018058c-ca75-4c95-9db9-4faac74dbedb",
    "metadata": {},
    "source": [
-    "Run the 3 following cells to download the data and the HateBERT model:"
+    "Run the 2 following cells to download the data and the HateBERT model:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "12de3d7f-a508-408a-9f99-367ae08e6dea",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\cf_off.tsv',\n",
-       " 'C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\factuals.tsv',\n",
-       " 'C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\frenk_test.tsv',\n",
-       " 'C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\frenk_train.tsv',\n",
-       " 'C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\ghc_test_2301.tsv',\n",
-       " 'C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\ghc_train_8404.tsv',\n",
-       " 'C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\try_test_2301.tsv',\n",
-       " 'C:\\\\Users\\\\Hp\\\\UB\\\\Fundamental Principles of Data Science\\\\2nd course\\\\2on semestre\\\\TFM\\\\Code\\\\data\\\\try_train_8404.tsv']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to retrieve folder contents\n"
+     ]
     }
    ],
    "source": [
     "#### Data ####\n",
-    "gdown.download_folder(\"https://drive.google.com/drive/folders/1iwB-TNZGpf7j-2P7vqAYnGMRiJC0VrVT?usp=drive_link\",quiet=True,use_cookies=False)"
+    "gdown.download_folder(\"https://drive.google.com/drive/folders/1kTq4SlverhBAjv9fFlorqGMJ6Wss1Lv_?usp=drive_link\",quiet=True,use_cookies=False)"
    ]
   },
   {
@@ -56,7 +46,7 @@
    "outputs": [],
    "source": [
     "#### HateBERT model ####\n",
-    "gdown.download_folder(\"https://drive.google.com/drive/folders/1u8nHlnWG1MSW5U_WqdLvIWJUNCPY4X0y?usp=drive_link\",quiet=True,use_cookies=False)"
+    "gdown.download_folder(\"https://drive.google.com/drive/folders/1ae7y00qglyqfU2BB7pGf5K1etRm36M_L?usp=drive_link\",quiet=True,use_cookies=False)"
    ]
   },
   {
